manifests/ingre.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: "jitsi.bogon.shop"
    http:
      paths:
      - path: /meet
        pathType: Prefix
        backend:
          service:
            name: jitsi
            port:
              number: 8443
